20170730: Upload all files

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,6 @@
 ################################################################################
 
 /MugenAITool/.vs/MugenAITool/v14
+/MugenAITool/obj/Debug
+/MugenAITool/bin/Debug
+/.vs/MugenAITool/v14
