--- a/MugenAITool/MugenAITool.csproj
+++ b/MugenAITool/MugenAITool.csproj
@@ -47,6 +47,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AtkStorageManager.cs" />
+    <Compile Include="AISwitchManager.cs" />
+    <Compile Include="GuardManager.cs" />
     <Compile Include="RegularExpressions.cs" />
     <Compile Include="StringHelpers.cs" />
     <Compile Include="Main.cs">
