--- a/MugenAITool/MugenAITool.csproj
+++ b/MugenAITool/MugenAITool.csproj
@@ -49,6 +49,7 @@
     <Compile Include="AtkStorageManager.cs" />
     <Compile Include="AISwitchManager.cs" />
     <Compile Include="CharFilesInfo.cs" />
+    <Compile Include="LanguageHandler.cs" />
     <Compile Include="GuardManager.cs" />
     <Compile Include="RegularExpressions.cs" />
     <Compile Include="StringHelpers.cs" />
